# painting-droid

./: .devcontainer.json  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  technical_improvement.md  technical_improvement.yml
.github/workflows/: claude_fix_dependabot.yml  create_desktop_release.yml  desktop_publish.yml  e2e_tests.yml  publish_docker_image.yml  update_progress.yml  validate.yml
apps/desktop/: .gitignore  Cargo.toml  package.json  tauri.conf.json
apps/desktop/capabilities/: main.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: commands.rs  main.rs  safe_storage.rs
apps/web/: .env.production  biome.json  components.json  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/e2e/: app.ts  smoke.test.ts  testApp.ts  testIds.ts  tools.test.ts  utils.ts
apps/web/e2e/tools/: brush.test.ts  brushDraw.test.ts  erase.test.ts  eraseDraw.test.ts  fill.test.ts  fillDraw.test.ts  pencil.test.ts  pencilDraw.test.ts  rectangleSelect.test.ts  shapeDraw.test.ts
apps/web/src/: App.tsx  application.tsx  constants.ts  contants.ts  environment.ts  errorBoundary.tsx  features.ts  main.tsx  styles.css  translations.ts
apps/web/src/adjustments/: apply.ts  index.ts
apps/web/src/canvas/: canvasActionDispatcher.ts  canvasState.ts
apps/web/src/commands/: addLayer.ts  addNewActiveWorkspace.ts  addWorkspaceLayer.ts  applyLayerAdjustment.ts  checkForUpdate.ts  clearActiveWorkspace.ts  closeActiveWorkspace.ts  context.ts  copyImage.ts  createActiveWorkspace.ts  createCommand.ts  cutImage.ts  dropFile.ts  dropFiles.ts  duplicateLayer.ts  editWorkspace.ts  fitCanvasToWindow.ts  hideLayer.ts  index.ts  mergeLayerDown.ts  moveLayerDown.ts  moveLayerUp.ts  newActiveWorkspace.ts  openAdjustmentsPopup.ts  openChatPopup.ts  openCommandPalette.ts  openCropCanvasDialog.ts  openFile.ts  openImageToImageDialog.ts  openLabelObjectsDialog.ts  openObjectDetectionDialog.ts  openRemoveBackgroundDialog.ts  openResizeCanvasDialog.ts  openSettingsDialog.ts  openSmartCropDialog.ts  openTextToImageDialog.ts  openWorkspace.ts  pasteImage.ts  redoCanvasAction.ts  removeLayer.ts  (+11 more)
apps/web/src/components/: Ruler.tsx  aiLabel.tsx  alertHost.tsx  appContent.tsx  appHeaderBar.tsx  appMenuBar.tsx  appStatusBar.tsx  assistant.tsx  canvasDropZone.tsx  canvasHost.tsx  canvasRulers.tsx  canvasViewport.tsx  chat.tsx  commandIconButton.tsx  commandPalette.tsx  commandPaletteHost.tsx  dialogHost.tsx  droid.tsx  dropFileZone.tsx  icon.tsx  iconAnchor.tsx  iconButton.tsx  keyGestureBadge.tsx  link.tsx  themeToggle.tsx  toolHandlers.ts  toolSettingsBar.tsx  typewriter.tsx  workspaceViewport.tsx
apps/web/src/contexts/: alertService.ts  (+7 more)
assets/: arch.drawio
core/: Cargo.toml  copy.js  package.json
core/src/: lib.rs
core/tests/: web.rs
docs/: README.md  SUMMARY.md  ai-models.md  data-privacy-and-security.md  installation.md
docs/ai-models/: stability.ai.md  stable-diffusion-webui.md
docs/requests/: local-demo.http
docs/tools/: brush.md
flatpak/: com.paintingdroid.PaintingDroid.json  com.paintingdroid.PaintingDroid.metainfo.xml
(+396 files in other folders)
