[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.6", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.0.2"
tauri-plugin-dialog = "2.0.4"
tauri-plugin-fs = "2.0.0-beta.3"
tauri-plugin-process = "2.0.1"
reqwest = { version = "0.12.9", features = ["blocking", "multipart"] }
keyring = "3.6.1"
regex = "1.11.1"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
